satellite client side set-up

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="homeMgmt">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./build/main.css" media="screen" title="no title">
     <title></title>
   </head>
   <body>
-    <h1 class="banner">Home Magmt</h1>
-
+    <login-directive></login-directive>
   </body>
+   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+   <script src="https://cdn.jsdelivr.net/satellizer/0.15.5/satellizer.min.js"></script>
+   <script src="./build/all.js"></script>
 </html>
