--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="mgmtApp">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./build/main.css" media="screen" title="no title">
     <title></title>
   </head>
   <body>
-    <h1 class="banner">Home Magmt</h1>
+    <div> what </div>
+    <ui-view></ui-view>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://cdn.jsdelivr.net/satellizer/0.15.5/satellizer.min.js"></script>
+    <script src="./build/all.js"></script>
 
   </body>
 </html>
