made temp header, set up styles, firxed gulp watch

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title></title>
   </head>
   <body>
-
+    <header-directive></header-directive>
     <div> what </div>
     <ui-view></ui-view>
 
