fixed unauthenticated redirect, commented out console logs, changed done checkbox with done button

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./build/main.css" media="screen" title="no title">
-    <title></title>
+    <title>hஇme</title>
   </head>
   <body>
     <header-directive></header-directive>
