--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <html ng-app="mgmtApp">
   <head>
     <meta charset="utf-8">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <link rel="icon"
       type="image/png"
       href="./favicon-home.ico">
